syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

message BarberShopService {
    string id = 1;
    string barber_shop_id = 2;
    int32 category_id = 3;
    int32 gender_id = 4;
    string name = 5;
    int32 timer = 6;
    float price = 7;
    optional float discount_price = 8;
    optional google.protobuf.Timestamp discount_start_time = 9;
    optional google.protobuf.Timestamp discount_end_time = 10;
    string description = 11;
    string image_url = 12;
    string category_name = 13;
    bool is_active = 14;
}

message ComboService {
    string id = 1;
    string barber_shop_id = 2;
    int32 gender_id = 3;
    string name = 4;
    int32 timer = 5;
    float price = 6;
    optional float discount_price = 7;
    optional google.protobuf.Timestamp discount_start_time = 8;
    optional google.protobuf.Timestamp discount_end_time = 9;
    string description = 10;
    string image_url = 11;
    bool is_active = 12; 
    repeated BarberShopService services = 13;
}

message ListComboServiceItem {
    string id = 1;
    string barber_shop_id = 2;
    int32 gender_id = 3;
    string name = 4;
    int32 timer = 5;
    float price = 6;
    optional float discount_price = 7;
    optional google.protobuf.Timestamp discount_start_time = 8;
    optional google.protobuf.Timestamp discount_end_time = 9;
    string description = 10;
    string image_url = 11;
    bool is_active = 12; 
    repeated string services = 13;
}

message CategoryPosition {
    int32 category_id = 1;
    int32 position = 2;
    bool visible = 3;
}